--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./script.js" defer ></script>
 </head>
 <body>
-    <h1>vinit gandhi</h1>
+    <h1 class="name">vinit gandhi</h1>
 </body>
 </html>
